src/main/resources/static/index.css
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');

:root {
    --white: #faf0e6;
    --black: #141414;
}

body, html {
    margin: 0px;
    height: 100%;
    width: 100%;
    font-family: 'Press Start 2P', cursive;
}

#canvas-wrapper {
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    background-color: #509e9e;
}

#canvas-wrapper h1 {
    font-family: 'Press Start 2P', cursive;
    color: white;
    text-shadow: 5px 5px black;
}

#chess-board {
    display: block;
    width: 80vh;
    height: 80vh;
    border: 1vh solid #141414;
}

#cat {
    position: absolute;
    right: 5em;
    bottom: 0px;
    height: 10em;
}

#piece-select {
    height: 100%;
    position: absolute;
    left: 1em;
    display: flex;
    flex-direction: row;
    align-items: center;
    /* box-shadow: #000000 0.6em 0.6em 0.0em 0.2em; */
}

.pieces-container {
    display: flex;
    flex-direction: column;
    margin-right: 1em;
}

#piece-select img:hover {
    transition: all 200ms;
    translate: 0.4em 0.4em;
    box-shadow: var(--black) 0.2em 0.2em;
    background-color: #cdc5bc;
}

#piece-select input[type="radio"]:checked+img {
    transition: all 200ms;
    translate: 0.4em 0.4em;
    box-shadow: var(--black) 0.2em 0.2em;
    background-color: #cdc5bc;
}

#piece-select img {
    transition: all 200ms;
    image-rendering: optimizeSpeed;
    height: 10vh;
    width: 10vh;
    padding: 0.5em;
    border: black 0.4em solid;
    background-color: var(--white);
    box-shadow: #2c2b2b 0.6em 0.6em;
    position: relative;
}

.piece-radio {
    image-rendering: optimizeSpeed;
    width: 10vh;
}

#instructions {
    position: absolute;
    right: 0em;
    width: max-content;
}

#instructions p {
    white-space: pre-line;
    padding: 1em;
    background-color: var(--white);
    border: var(--black) 0.4em solid;
}

